--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,10 @@ services:
          dockerfile: ./web/Dockerfile
       volumes:
          - ./web:/var/www/html
+      # environment:
+      #    - VIRTUAL_HOST=myhp.nitkpc.com
+      #    - VIRTUAL_PORT=8080
+      #    - LETSENCRYPT_HOST=my.hpnitkpc.com
       ports:
          - 8080:80
       container_name: myweb
