--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
       volumes:
          - ./web:/var/www/html
       environment:
-         - VIRTUAL_HOST=www.nitkpc.com
+         - VIRTUAL_HOST=www.nitkpc.com,nitkpc.com
          - VIRTUAL_PORT=80
-         - LETSENCRYPT_HOST=www.nitkpc.com
+         - LETSENCRYPT_HOST=www.nitkpc.com,nitkpc.com
       ports:
          - 80
       container_name: myweb
